# sord

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  AUTHORS  COPYING  ChangeLog  NEWS  README.md  meson.build  meson_options.txt  sord.pc.in  wscript
.reuse/: dep5
doc/: mainpage.dox  meson.build  reference.doxygen.in  sord_validate.1  sordi.1
include/sord/: sord.h  sordmm.hpp
meson/suppressions/: meson.build
sord/: sord.h  sordmm.hpp
src/: .clang-tidy  sord.c  sord_config.h  sord_internal.h  sord_test.c  sord_validate.c  sordi.c  sordmm_test.cpp  syntax.c
src/zix/: btree.c  btree.h  common.h  digest.c  digest.h  hash.c  hash.h  tree.c  tree.h
test/: .clang-tidy  meson.build  test_sord.c
test/cpp/: .clang-tidy  meson.build  sordmm_test.cpp
test/headers/: .clang-tidy  meson.build  test_headers.c
